--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "guzzlehttp/guzzle": "^6.2",
         "intervention/image": "^2.3",
+        "jenssegers/date": "^3.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "styde/html": "~1.3",
